--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ of self-employment are of interest.</p>-->
       <ol class="s">
         <li><h4><a href="basic/EstimatingCounterfactuals.html">Estimating counterfactuals following Deming and Stephan (1940)
         </a></h4></li>
-        <li><h4><a href="basic/SpectechLegalMIndex.html">Decomposition of M index change for legal occupations
+        <li><h4><a href="basic/SpectechLegalCounterfactuals.html"> Counterfactuals for a collapsed set of occupations
         </a></h4></li>
       </ol>
     </ol>
