append final paragraph to SpectechLegalCounterfactuals

--- a/basic/SpectechLegalCounterfactuals.html
+++ b/basic/SpectechLegalCounterfactuals.html
@@ -150,6 +150,9 @@ mutual_difference(legal1985, legal2005, "Gender", "OccMinor", weight = "w", se=T
 ## 7:  unit_marginal  0.0000209698 6.467000e-06   7.527389e-06,2.779999e-05 -7.069809e-06
 ## 8:     structural -0.0002647772 3.115294e-05 -0.0003221377,-0.0001986830 -8.077073e-07
 </code></pre>
+<p>Because M is dependent on the number of occupations, calculations of M for this collapsed set can't be readily compared to 
+    the full set. The next page continues analysis of local segregation for the full set of spectech occupations.
+</p>
 </article>
 <!--
 <article>
