--- a/basic/SpectechLegalCounterfactuals.html
+++ b/basic/SpectechLegalCounterfactuals.html
@@ -85,7 +85,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 </article>
 <article>
     <h4>Comparison to Elber's decomposition</h4>
-    <p>Segregation computations for the this compressed dataset are contain in <a href="R/SpectechLegalMIndex.R">supplemental R code</a>. Relevant 
+    <p>Segregation computations for the this compressed dataset are contained in <a href="R/SpectechLegalMIndex.R">supplemental R code</a>. Relevant 
     extracts are shown below.</p>
     <h5>Decomposition of the change in M into structural and marginal components.</h5>
     <p>The segregation package's ipf function calculates a set of counterfactuals using the iterative proportional fitting 
