--- a/basic/SpectechLocalSegregation.html
+++ b/basic/SpectechLocalSegregation.html
@@ -3,7 +3,7 @@
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="revised" content="18 April 2022" />
-        <title>Drill down: Specialists and technicians - Changes and local segregation</title>
+        <title>Drill down: Specialists and technicians - Changes and local segregation at detailed occupational level</title>
 
         <!--<link rel="stylesheet" href="https://latex.now.sh/style.css"> -->
         <link rel="stylesheet" href="https://alanintsukuba.github.io/latex.css">
@@ -15,11 +15,14 @@ integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="ano
 integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]-->    
 </head>
 <body>
-    <h1>Drill down: Specialists and technicians - Changes and local segregation</h1>
+    <h1>Drill down: Specialists and technicians - Changes and local segregation at detailed occupational level</h1>
     <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
         18 April 2022</p>
     <article>
         <h4>Decompose 1985-2005 changes into structural and marginal contributions</h4>
+        <p>With the counterfactuals in hand, we can now proceed to decomposing changes in M into structural and marginal contributions at the detailed occupation level. 
+            We can further decompose both the marginal and structural contributions by gender and occupation.
+        </p>
     </article>
     <article>
         <h4>Further decompose marginal contributions by gender and occupation</h4>
