--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ of self-employment are of interest.</p>-->
         </a></h4></li>
         <li><h4><a href="basic/SpectechLegalCounterfactuals.html">Counterfactuals for a collapsed set of occupations
         </a></h4></li>
-        <li><h4><a href="basic/SpectechLocalSegregation.html">Changes and local segregation
+        <li><h4><a href="basic/SpectechLocalSegregation.html">Changes and local segregation at detailed occupational level
         </a></h4></li>
       </ol>
     </ol>
