--- a/basic/DescriptiveStatistics.html
+++ b/basic/DescriptiveStatistics.html
@@ -2,7 +2,7 @@
     <head>
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="revised" content="16 December 2021" />
+      <meta name="revised" content="2 May 2022" />
         <title>Descriptive statistics</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
@@ -16,7 +16,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <body>
 <h1>Descriptive statistics</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-16 December 2021</p>
+    2 May 2022</p>
 <main>
     <p>This task produces a table of descriptive statistics similar to Table 3 in <a href="#Elbers2021">Elbers (2021)</a>. 
     Except where noted, the statistics are generated using the R scripts included below.</p>
@@ -34,11 +34,11 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
        <tbody>
          <tr>
           <td style="text-align:left;"> Sample size (in 1000) </td>
-          <td style="text-align:right;"> 55611 </td>
-          <td style="text-align:right;"> 61254 </td>
-          <td style="text-align:right;"> 63775 </td>
-          <td style="text-align:right;"> 62290 </td>
-          <td style="text-align:right;"> 60397 </td>
+          <td style="text-align:right;"> 60193 </td>
+          <td style="text-align:right;"> 67032 </td>
+          <td style="text-align:right;"> 70265 </td>
+          <td style="text-align:right;"> 70352 </td>
+          <td style="text-align:right;"> 65713 </td>
          </tr>
          <tr grouplength="3"><td colspan="6" style="border-bottom: 1px solid;"><strong>A. Number of occupations</strong></td></tr>
        <tr>
@@ -69,18 +69,18 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
        <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> Female </td>
           <td style="text-align:right;"> 37 </td>
-          <td style="text-align:right;"> 40 </td>
+          <td style="text-align:right;"> 39 </td>
           <td style="text-align:right;"> 40 </td>
           <td style="text-align:right;"> 41 </td>
-          <td style="text-align:right;"> 42 </td>
+          <td style="text-align:right;"> 43 </td>
          </tr>
          <tr grouplength="9"><td colspan="6" style="border-bottom: 1px solid;"><strong>C. Distribution of occupational major groups (%)</strong></td></tr>
        <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> A SPECIALIST / TECHNICAL </td>
           <td style="text-align:right;"> 11 </td>
+          <td style="text-align:right;"> 11 </td>
           <td style="text-align:right;"> 12 </td>
-          <td style="text-align:right;"> 13 </td>
-          <td style="text-align:right;"> 14 </td>
+          <td style="text-align:right;"> 12 </td>
           <td style="text-align:right;"> 14 </td>
          </tr>
          <tr>
@@ -93,11 +93,11 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> C CLERICAL </td>
-          <td style="text-align:right;"> 14 </td>
+          <td style="text-align:right;"> 13 </td>
+          <td style="text-align:right;"> 18 </td>
+          <td style="text-align:right;"> 18 </td>
+          <td style="text-align:right;"> 17 </td>
           <td style="text-align:right;"> 19 </td>
-          <td style="text-align:right;"> 19 </td>
-          <td style="text-align:right;"> 20 </td>
-          <td style="text-align:right;"> 20 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> D SALES </td>
@@ -105,60 +105,76 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
           <td style="text-align:right;"> 14 </td>
           <td style="text-align:right;"> 15 </td>
           <td style="text-align:right;"> 15 </td>
-          <td style="text-align:right;"> 15 </td>
+          <td style="text-align:right;"> 13 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> E SERVICES </td>
           <td style="text-align:right;"> 7 </td>
           <td style="text-align:right;"> 7 </td>
           <td style="text-align:right;"> 8 </td>
-          <td style="text-align:right;"> 9 </td>
           <td style="text-align:right;"> 10 </td>
+          <td style="text-align:right;"> 13 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> F SECURITY </td>
           <td style="text-align:right;"> 1 </td>
-          <td style="text-align:right;"> 1 </td>
-          <td style="text-align:right;"> 1 </td>
+          <td style="text-align:right;"> 2 </td>
+          <td style="text-align:right;"> 2 </td>
           <td style="text-align:right;"> 2 </td>
           <td style="text-align:right;"> 2 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> G AG, F &amp; F </td>
-          <td style="text-align:right;"> 10 </td>
+          <td style="text-align:right;"> 9 </td>
           <td style="text-align:right;"> 7 </td>
-          <td style="text-align:right;"> 6 </td>
           <td style="text-align:right;"> 5 </td>
           <td style="text-align:right;"> 5 </td>
+          <td style="text-align:right;"> 4 </td
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> H TRANSPORT &amp; COMM </td>
           <td style="text-align:right;"> 4 </td>
           <td style="text-align:right;"> 4 </td>
           <td style="text-align:right;"> 4 </td>
-          <td style="text-align:right;"> 4 </td>
-          <td style="text-align:right;"> 4 </td>
+          <td style="text-align:right;"> 3 </td>
+          <td style="text-align:right;"> 3 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANU., OPERATORS, LABORERS </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANUF., PRODUCTION </td>
           <td style="text-align:right;"> 32 </td>
           <td style="text-align:right;"> 31 </td>
           <td style="text-align:right;"> 30 </td>
           <td style="text-align:right;"> 29 </td>
           <td style="text-align:right;"> 28 </td>
          </tr>
-         <tr grouplength="9"><td colspan="6" style="border-bottom: 1px solid;"><strong>D. Female labor force by major groups (%)</strong></td></tr>
+         <tr>
+            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MACHINERY OPERATORS </td>
+            <td style="text-align:right;"> 2 </td>
+            <td style="text-align:right;"> 1 </td>
+            <td style="text-align:right;"> 1 </td>
+            <td style="text-align:right;"> 1 </td>
+            <td style="text-align:right;"> 1 </td>
+           </tr>
+           <tr>
+            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MINE, CONSTRUCTION WORKERS </td>
+            <td style="text-align:right;"> 9 </td>
+            <td style="text-align:right;"> 9 </td>
+            <td style="text-align:right;"> 9 </td>
+            <td style="text-align:right;"> 9 </td>
+            <td style="text-align:right;"> 9 </td>
+           </tr>
+             <tr grouplength="9"><td colspan="6" style="border-bottom: 1px solid;"><strong>D. Female labor force by major groups (%)</strong></td></tr>
        <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> A SPECIALIST / TECHNICAL </td>
           <td style="text-align:right;"> 40 </td>
           <td style="text-align:right;"> 41 </td>
           <td style="text-align:right;"> 42 </td>
           <td style="text-align:right;"> 43 </td>
-          <td style="text-align:right;"> 47 </td>
+          <td style="text-align:right;"> 44 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> B MANAGERIAL </td>
-          <td style="text-align:right;"> 9 </td>
+          <td style="text-align:right;"> 8 </td>
           <td style="text-align:right;"> 9 </td>
           <td style="text-align:right;"> 10 </td>
           <td style="text-align:right;"> 11 </td>
@@ -174,19 +190,19 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> D SALES </td>
-          <td style="text-align:right;"> 37 </td>
-          <td style="text-align:right;"> 37 </td>
-          <td style="text-align:right;"> 37 </td>
-          <td style="text-align:right;"> 36 </td>
+          <td style="text-align:right;"> 35 </td>
+          <td style="text-align:right;"> 34 </td>
+          <td style="text-align:right;"> 35 </td>
+          <td style="text-align:right;"> 33 </td>
           <td style="text-align:right;"> 38 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> E SERVICES </td>
           <td style="text-align:right;"> 63 </td>
-          <td style="text-align:right;"> 63 </td>
-          <td style="text-align:right;"> 64 </td>
+          <td style="text-align:right;"> 61 </td>
+          <td style="text-align:right;"> 62 </td>
           <td style="text-align:right;"> 65 </td>
-          <td style="text-align:right;"> 66 </td>
+          <td style="text-align:right;"> 67 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> F SECURITY </td>
@@ -194,12 +210,12 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
           <td style="text-align:right;"> 3 </td>
           <td style="text-align:right;"> 5 </td>
           <td style="text-align:right;"> 5 </td>
-          <td style="text-align:right;"> 5 </td>
+          <td style="text-align:right;"> 6 </td>
          </tr>
          <tr>
           <td style="text-align:left;padding-left: 2em;" indentlevel="1"> G AG, F &amp; F </td>
-          <td style="text-align:right;"> 46 </td>
           <td style="text-align:right;"> 45 </td>
+          <td style="text-align:right;"> 44 </td>
           <td style="text-align:right;"> 43 </td>
           <td style="text-align:right;"> 43 </td>
           <td style="text-align:right;"> 41 </td>
@@ -213,17 +229,34 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
           <td style="text-align:right;"> 4 </td>
          </tr>
          <tr>
-          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANU., OPERATORS, LABORERS </td>
-          <td style="text-align:right;"> 31 </td>
-          <td style="text-align:right;"> 31 </td>
-          <td style="text-align:right;"> 29 </td>
-          <td style="text-align:right;"> 29 </td>
-          <td style="text-align:right;"> 29 </td>
+          <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MANUF., PRODUCTION </td>
+          <td style="text-align:right;"> 38 </td>
+          <td style="text-align:right;"> 39 </td>
+          <td style="text-align:right;"> 38 </td>
+          <td style="text-align:right;"> 39 </td>
+          <td style="text-align:right;"> 37 </td>
          </tr>
-       </tbody>
+         <tr>
+            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MACHINERY OPERATORS</td>
+            <td style="text-align:right;"> 1 </td>
+            <td style="text-align:right;"> 1 </td>
+            <td style="text-align:right;"> 1 </td>
+            <td style="text-align:right;"> 1 </td>
+            <td style="text-align:right;"> 1 </td>
+           </tr>
+           <tr>
+            <td style="text-align:left;padding-left: 2em;" indentlevel="1"> I MINE, CONSTRUCTION WORKERS </td>
+            <td style="text-align:right;"> 20 </td>
+            <td style="text-align:right;"> 22 </td>
+            <td style="text-align:right;"> 24 </td>
+            <td style="text-align:right;"> 26 </td>
+            <td style="text-align:right;"> 27 </td>
+           </tr>
+           </tbody>
        </table>
-<pre><code class="language-html">#' AnalyzePerElbers.R
+<pre><code class="language-html">#' DescriptiveStatistics.R
 #' 2021-12-15
+#' Revised 2022-5-2
 
 #' Adapted from
 #' Elbers, Benjamin. A Method for Studying Differences in Segregation Across Time and Space. 
@@ -241,24 +274,25 @@ library("kableExtra")
 ## data is in occgenall
 head(occgenall)
 #' Harmonized occupation classes to get main group titles
-hoc <- read.csv("Data/OccupationalCrosswalk1985-2005.csv",header=T)
+# V02 created 2022-4-19
+#' hoc is created in BuildMasterDataset.R.
 
 # make copy to use as Elbers
 d <- as_tibble(occgenall) %>%
-    rename(w = value) %>% rename(year = CensusYear) %>%
+    mutate(w = n,OccSub = as.character(OccSub),
+    OccMain = as.character(OccMain), OccSub=as.character(OccSub),
+    OccMid=as.character(OccMid),OccMinor=as.character(OccMinor),
+    year = as.integer(year)) %>%
     filter(OccMinor != 1267)
-d$n <- as.integer(d$w)
-
-
 head(d)
 
 ##########################
 ###### descriptives ######
 ##########################
 
-samplesize <- d %>%
+samplesize <- d %>% filter(!is.na(n)) %>%
     group_by(year) %>%
-    summarize(n = sum(n)) %>%
+    summarize(n = sum(w)) %>%
     mutate(var = "Sample size (in 1000)",
         n = round(n / 1000)) %>%
     spread(year, n)
@@ -288,7 +322,7 @@ nocc <- tribble(~var, ~`1985`, ~`1990`, ~`1995`, ~`2000`, ~`2005`,
         length(setdiff(occ2000, occ2005))
     )
 
-gender <- d %>%
+gender <- d %>% filter(!is.na(w)) %>%
     group_by(year, Gender) %>%
     summarize(n = sum(w)) %>%
     group_by(year) %>%
@@ -298,29 +332,29 @@ gender <- d %>%
     spread(year, p) %>%
     rename(var = Gender)
 
-occ <- d %>%
-    group_by(year, OccMain) %>%
+occ <- d %>% filter(!is.na(w)) %>%
+    group_by(year, OccMain,OccSub) %>%
     summarize(n = sum(w)) %>%
     group_by(year) %>%
     mutate(p = round(n / sum(n) * 100)) %>%
     select(-n) %>%
     spread(year, p) %>%
-    merge(hoc[nchar(hoc$MainTitle)>0,c("OccMain","MainTitle")]) %>%
+    merge(hoc[nchar(hoc$MainTitle)>0,c("OccMain","OccSub","MainTitle")]) %>%
     mutate(OccMain = paste(OccMain,MainTitle,sep=" "))  %>%
-    select(-MainTitle) %>%
+    select(-MainTitle,-OccSub) %>%
     rename(var = OccMain)
 
-occ_gender <- d %>%
-    group_by(year, OccMain, Gender) %>%
+occ_gender <- d %>% filter(!is.na(w)) %>%
+    group_by(year, OccMain,OccSub, Gender) %>%
     summarize(n = sum(w)) %>%
-    group_by(year, OccMain) %>%
+    group_by(year, OccMain,OccSub) %>%
     mutate(p = round(n / sum(n) * 100)) %>%
     filter(Gender== "FEMALE") %>%
     select(-n, -Gender) %>%
     spread(year, p) %>%
-    merge(hoc[nchar(hoc$MainTitle)>0,c("OccMain","MainTitle")]) %>%
+    merge(hoc[nchar(hoc$MainTitle)>0,c("OccMain","OccSub","MainTitle")]) %>%
     mutate(OccMain = paste(OccMain,MainTitle,sep=" "))  %>%
-    select(-MainTitle) %>%
+    select(-MainTitle,-OccSub) %>%
     rename(var = OccMain)
 
 desc <- bind_rows(samplesize, nocc, gender, occ, occ_gender)
@@ -334,8 +368,8 @@ kable(desc, "latex", booktabs = T) %>%
     row_spec(0, align = "c") %>%
     group_rows("A. Number of occupations", 2, 4) %>%
     group_rows("B. Labor force participation (%)", 5, 5) %>%
-    group_rows("C. Distribution of occupational major groups (%)", 6, 14) %>%
-    group_rows("D. Female labor force by major groups (%)", 15, 25) %>%
+    group_rows("C. Distribution of occupational major groups (%)", 6, 16) %>%
+    group_rows("D. Female labor force by major groups (%)", 17, 27) %>%
     cat(file = "Output/desc.tex", sep = "\n")
 
 kable(desc, "html", booktabs = T) %>%
@@ -344,10 +378,9 @@ kable(desc, "html", booktabs = T) %>%
     row_spec(0, align = "c") %>%
     group_rows("A. Number of occupations", 2, 4) %>%
     group_rows("B. Labor force participation (%)", 5, 5) %>%
-    group_rows("C. Distribution of occupational major groups (%)", 6, 14) %>%
-    group_rows("D. Female labor force by major groups (%)", 15, 23) %>%
+    group_rows("C. Distribution of occupational major groups (%)", 6, 16) %>%
+    group_rows("D. Female labor force by major groups (%)", 17, 27) %>%
     cat(file = "Output/desc.html", sep = "\n")
-                
 </code></pre>
 </main>
 <div id="references" class="section level2">
