--- a/basic/BuildMasterDataset.html
+++ b/basic/BuildMasterDataset.html
@@ -3,7 +3,7 @@
     <head>
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="revised" content="2 May 2022" />
+      <meta name="revised" content="7 May 2022" />
         <title>Build master dataset</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
@@ -17,7 +17,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <body>
 <h1>Build master dataset</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-    2 May 2022</p>
+    7 May 2022</p>
 <main>
 <p>The following R script builds the master occupation-gender dataset from the table of harmonized 
     occupation classifications and occupation-gender files downloaded from e-Stat and preprocessed.
@@ -39,6 +39,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 #' install.packages("tidyverse")
 require(openxlsx)
 require(tidyverse)
+
 
 #' Load and look at harmonized occupation classes
 hoc <- read.csv("Data/OccupationalCrosswalk1985-2005V02.csv",header=T)
@@ -85,63 +86,59 @@ head(mot)
 
 occgencomb <- merge(hoc %>% select(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg,X1985),
     mot, by.x="X1985",by.y="OccCode") %>% 
-    group_by(OccCodeAgg, Gender) %>% 
-    mutate(year=1985, n=sum(value)) %>%
-    select(-X1985, -value) 
+    group_by(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg, Gender) %>% 
+    summarize( n=sum(value)) %>% mutate(year=1985) 
 
-head(occgencomb)
-summarize(occgencomb)
-## put occgencomb in a master occgenall data frame
+#' head(occgencomb)
+#' summarize(occgencomb)
+#' put occgencomb in a master occgenall data frame
 occgenall <- occgencomb
 
 #' Repeat for 1990
 mot <- read.xlsx("Data/1990_totals_minor_occupations.xlsx","Extract")
 occgencomb <- merge(hoc %>% select(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg,X1990),
     mot, by.x="X1990",by.y="OccCode") %>% 
-    group_by(OccCodeAgg, Gender) %>% 
-    mutate(year=1990, n=sum(value)) %>%
-    select(-X1990, -value)
+    group_by(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg, Gender) %>% 
+    summarize( n=sum(value)) %>% mutate(year=1990) 
 
-head(occgencomb)
-summarize(occgencomb)
+#' head(occgencomb)
+#' summarize(occgencomb)
 occgenall <- rbind(occgenall,occgencomb)
 
 #' Repeat for 1995
 mot <- read.xlsx("Data/1995_totals_minor_occupations.xlsx","Extract")
 occgencomb <- merge(hoc %>% select(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg,X1995),
     mot, by.x="X1995",by.y="OccCode") %>% 
-    group_by(OccCodeAgg, Gender) %>% 
-    mutate(year=1995, n=sum(value)) %>%
-    select(-X1995, -value)
+    group_by(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg, Gender) %>% 
+    summarize( n=sum(value)) %>% mutate(year=1995) 
 
-head(occgencomb)
-summarize(occgencomb)
+#' head(occgencomb)
+#' summarize(occgencomb)
 occgenall <- rbind(occgenall,occgencomb)
 
 #' Repeat for 2000
 mot <- read.xlsx("Data/2000_totals_minor_occupations.xlsx","Extract")
 occgencomb <- merge(hoc %>% select(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg,X2000),
     mot, by.x="X2000",by.y="OccCode") %>% 
-    group_by(OccCodeAgg, Gender) %>% 
-    mutate(year=2000, n=sum(value)) %>%
-    select(-X2000, -value) 
+    group_by(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg, Gender) %>% 
+    summarize( n=sum(value)) %>% mutate(year=2000) 
 
-head(occgencomb)
-summarize(occgencomb)
+#' head(occgencomb)
+#' summarize(occgencomb)
 occgenall <- rbind(occgenall,occgencomb)
 
 #' Repeat for 2005
 mot <- read.xlsx("Data/2005_totals_minor_occupations.xlsx","Extract")
 occgencomb <- merge(hoc %>% select(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg,X2005),
     mot, by.x="X2005",by.y="OccCode") %>% 
-    group_by(OccCodeAgg, Gender) %>% 
-    mutate(year=2005, n=sum(value)) %>%
-    select(-X2005, -value) 
+    group_by(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg, Gender) %>% 
+    summarize( n=sum(value)) %>% mutate(year=2005) 
 
-head(occgencomb)
-summarize(occgencomb)
+#' head(occgencomb)
+#' summarize(occgencomb)
 occgenall <- rbind(occgenall,occgencomb)  %>%
-    arrange(OccCodeAgg,Gender,year)
+    arrange(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg, Gender,year) %>%
+    select(OccMain,OccSub,OccMid,OccMinor,OccCodeAgg, Gender,year,n)
 
 #######################################################
 #' occgenall is the completed full dataset. Save it as an 
@@ -154,8 +151,6 @@ write.table(occgenall, file="Data/occgenall.csv", sep="\t",row.names=F)
 #' clean up
 ls()
 rm(mot, occgencomb)
-
-
 </code></pre>    
 </main>
 </body>
